--- a/css/posts/neural-damage.css
+++ b/css/posts/neural-damage.css
@@ -14,7 +14,7 @@ html, body{
   "sd"
   "ft";
   color: rgb(255, 255, 255);
-  font-family: 'Segoe UI';
+  font-family: 'Jost';
   text-align: center;
 }
 
