--- a/css/posts/neural-damage.css
+++ b/css/posts/neural-damage.css
@@ -1,3 +1,9 @@
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 html, body{
   margin: 0;
 }
@@ -14,7 +20,7 @@ html, body{
   "sd"
   "ft";
   color: rgb(255, 255, 255);
-  font-family: 'Jost';
+  font-family: 'Inter';
   text-align: center;
 }
 
