--- a/css/posts/neural-damage2.css
+++ b/css/posts/neural-damage2.css
@@ -66,7 +66,7 @@ html, body{
 
 .content {
   grid-area: main;
-  background: linear-gradient(to bottom, rgb(78, 78, 78), black,black, black,black,black,black);
+  background: linear-gradient(to bottom, rgb(78, 78, 78), black,black, black,black,black,black,black);
 }
 
 .date {
@@ -166,7 +166,7 @@ blockquote {
 .footer {
   grid-area: ft;
   padding: 20px;
-  background: linear-gradient(to bottom, rgb(26, 92, 168), black);
+  background: linear-gradient(to bottom, rgb(172, 44, 12), black);
 }
 
 .footer .social {
@@ -376,7 +376,7 @@ blockquote {
 
   .content {
     grid-area: main;
-    background: linear-gradient(to bottom, rgb(78, 78, 78), black,black, black);
+    background: linear-gradient(to bottom, rgb(78, 78, 78), rgb(69, 69, 69), black,black);
   }
 
   .content figure {
@@ -470,7 +470,7 @@ blockquote {
   }
 
   .side img {
-    padding-left: 10px;
+    padding-left: 5px;
   }
   
   /* Footer */
