--- a/css/posts/neural-damage3.css
+++ b/css/posts/neural-damage3.css
@@ -7,7 +7,7 @@ html, body{
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 150px 3900px 1600px 220px;
+  grid-template-rows: 150px 4600px 1600px 220px;
   grid-template-areas: 
   "hd"
   "main"
@@ -35,7 +35,7 @@ html, body{
   font-size: 32px;
   text-decoration: underline;
   text-decoration-thickness: 30px;
-  text-underline-offset: 10px;
+  text-underline-offset: 6px;
   text-decoration-skip-ink: none;
 }
 
@@ -66,7 +66,7 @@ html, body{
 
 .content {
   grid-area: main;
-  background: linear-gradient(to bottom, rgb(78, 78, 78), black,black, black,black,black,black);
+  background: linear-gradient(to bottom, rgb(78, 78, 78), black,black, black,black,black,black,black);
 }
 
 .date {
@@ -125,6 +125,10 @@ blockquote {
   padding-top: 120px;
 }
 
+.content2 p {
+    font-size: 14px;
+  }
+
 .column { 
   margin-bottom: 120px;
 }
@@ -133,6 +137,10 @@ blockquote {
   display: none;
   padding: 0;
 }
+
+.column figcaption {
+    color: #ffffff;
+  }
 
 /* Variations */
 
@@ -166,7 +174,7 @@ blockquote {
 .footer {
   grid-area: ft;
   padding: 20px;
-  background: linear-gradient(to bottom, rgb(26, 92, 168), black);
+  background: linear-gradient(to bottom, rgb(172, 44, 12), black);
 }
 
 .footer .social {
@@ -240,7 +248,7 @@ blockquote {
   .container {
     display:grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 150px 3700px 1500px 220px;
+    grid-template-rows: 150px 4500px 1500px 220px;
     grid-template-areas: 
     "hd"
     "main"
@@ -283,7 +291,7 @@ blockquote {
   .container {
     display:grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 150px 4700px 2000px 220px;
+    grid-template-rows: 150px 5200px 2000px 220px;
     grid-template-areas: 
     "hd"
     "main"
@@ -315,7 +323,7 @@ blockquote {
   .container {
     display:grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 150px 5400px 2400px 220px;
+    grid-template-rows: 150px 6300px 2400px 220px;
     grid-template-areas: 
     "hd"
     "main"
@@ -347,7 +355,7 @@ blockquote {
   .container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: 140px 1100px 1000px 180px;
+    grid-template-rows: 140px 1100px 1200px 180px;
     grid-template-areas: 
     "hd hd hd hd hd hd hd hd"
     "main main main main main main sd sd"
@@ -376,7 +384,7 @@ blockquote {
 
   .content {
     grid-area: main;
-    background: linear-gradient(to bottom, rgb(78, 78, 78), black,black, black);
+    background: linear-gradient(to bottom, rgb(78, 78, 78), black,black);
   }
 
   .content figure {
@@ -402,6 +410,11 @@ blockquote {
     padding-top: 100px;
     padding-left: 40px;
     color:rgb(0, 0, 0);
+  }
+
+  .content2 p {
+    color: #000000;
+    font-size: 15px;
   }
 
   .row1 {
@@ -470,7 +483,7 @@ blockquote {
   }
 
   .side img {
-    padding-left: 10px;
+    padding-left: 5px;
   }
   
   /* Footer */
@@ -491,7 +504,7 @@ blockquote {
   .container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: 170px 1600px 1500px 180px;
+    grid-template-rows: 170px 1600px 1700px 180px;
     grid-template-areas: 
     "hd hd hd hd hd hd hd hd"
     "main main main main main main sd sd"
@@ -569,6 +582,11 @@ blockquote {
     color:rgb(0, 0, 0);
     font-size: 28px;
   }
+
+  .content2 p {
+    color: #000000;
+    font-size: 20px;
+  }
   
   .row1 {
     display: flex;
@@ -633,7 +651,7 @@ blockquote {
   .container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: 300px 3200px 2700px 240px;
+    grid-template-rows: 300px 3200px 3200px 240px;
     grid-template-areas: 
     "hd hd hd hd hd hd hd hd"
     "main main main main main main sd sd"
@@ -717,6 +735,11 @@ blockquote {
   }
 
   .content2 figcaption {
+    font-size: 40px;
+  }
+
+  .content2 p {
+    color: #000000;
     font-size: 40px;
   }
 
